# programming_2025

lab 6.2/: CMakeLists.txt  main.cpp
lab1/: main.cpp
lab2/: main.cpp
lab2.1/: CMakeLists.txt  main.cpp
lab2.2/: CMakeLists.txt  Country.cpp  Country.hpp  main.cpp
lab2.3/: CMakeLists.txt  Country.cpp  Country.hpp  main.cpp
lab2.3/include/: country_lib.hpp
lab2.3/src/: country_lib.cpp
lab2_5/: CMakeLists.txt  americanperson.cpp  americanperson.h  data.txt  date.h  mainwindow.cpp  mainwindow.h  passform.cpp  passform.h  person.h  russianperson.cpp  russianperson.h
lab2_6/: CMakeLists.txt  data.txt  mainwindow.cpp  mainwindow.h  pointofinterest.cpp  pointofinterest.h
lab3/: main.cpp
lab4/: main.cpp
lab5/: main.cpp
lab7/: main.cpp
lab8/: main.cpp
lab_4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  person.cpp  person.h
lecture01_basics/: main.cpp
lecture02_basics/: CMakeLists.txt  main.cpp
